# iota-tpu

./: setup_wallet.sh
shared/common/: pyproject.toml
shared/common/src/common/: configs.py  settings.py  test_utils.py
shared/common/src/common/models/: api_models.py  error_models.py
shared/common/src/common/utils/: epistula.py  exceptions.py  formulas.py  metrics.py  timer_logger.py
shared/subnet/: pyproject.toml
shared/subnet/src/subnet/: miner_api_client.py  test_client.py  validator_api_client.py
shared/subnet/src/subnet/base/: base_neuron.py
shared/subnet/src/subnet/model/: gpu_device.py  loaders.py  model_mixin.py  utils.py
shared/subnet/src/subnet/utils/: partition_utils.py
src/miner/: main_pool.py  main_pool.spec  pyproject.toml
src/miner/src/miner/: health_server.py  new_miner.py  settings.py
src/miner/src/miner/pool/: __init__.py  miner.py  stats.py
src/miner/src/miner/pool/dashboard/: __init__.py  chart.py  dashboard.py  lifecycle.py  models.py  stream_router.py  utils.py
src/miner/src/miner/pool/wallet_utils/: __init__.py  btcli.py  selection.py  ui.py
src/miner/src/miner/training/: activation_publisher.py  activation_queue.py  training.py
src/miner/src/miner/utils/: miner_dashboard_api.py  run_utils.py  timer_logger.py  utils.py
src/miner/src/miner/visualization/: vis.html
src/miner/tests/: test_wallet_utils_btcli.py
src/validator/scripts/: launch_validator.py
src/validator/src/validator/: settings.py  validator.py
src/validator/src/validator/utils/: code_executor.py  task_execution.py  weight_setting.py
